# rent-right

./: README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/models/: rental.py
backend/app/routers/: assistant.py
backend/app/services/: agent.py  legal_db.py
src/: index.css
src/components/: CaseSelector.tsx  StepIndicator.tsx
src/components/steps/: AnalysisStep.tsx  DraftStep.tsx  InputStep.tsx  SendStep.tsx  TrackStep.tsx
src/data/: cases.ts
src/hooks/: useChat.ts
src/pages/: Index.tsx
